Before cleaning a bit the assignment pages

--- a/index.yaml
+++ b/index.yaml
@@ -21,3 +21,9 @@ indexes:
   - name: allowed
   - name: when
     direction: desc
+
+- kind: Task
+  properties:
+  - name: active
+  - name: when
+    direction: desc
